fixed overflow issues with mobile layout

--- a/shreddit.io/shreddit.io/static/css/home.css
+++ b/shreddit.io/shreddit.io/static/css/home.css
@@ -2,9 +2,9 @@
     padding: 10vh 0;
     margin: 0;
     margin-top: -5vh;
-    position: relative;
-    top: -100vh;
-    z-index: 0;
+    position: absolute;
+    top: 0;
+    z-index: 1;
 }
 
 .note-icon {
