--- a/shreddit.io/shreddit.io/static/css/main.css
+++ b/shreddit.io/shreddit.io/static/css/main.css
@@ -14,7 +14,7 @@ body {
     overflow-x: hidden;
     position: relative;
     top: 0;
-    width: 99vw;
+    width: 100vw;
 }
 
 h1,h2 {
